refactor: Introduce RegularTransferParameters and move all relevant parameters